webschembly-compiler/src/lexer/snapshots/webschembly_compiler__lexer__snapshot_lex-6.snap
---
source: webschembly-compiler/src/lexer/mod.rs
expression: "lex(\"#\\\\a\")"
---
Ok(
    [
        Token {
            kind: Char(
                'a',
            ),
            span: Span {
                start: Pos {
                    line: 1,
                    column: 1,
                },
                end: Pos {
                    line: 1,
                    column: 4,
                },
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: Pos {
                    line: 1,
                    column: 4,
                },
                end: Pos {
                    line: 1,
                    column: 4,
                },
            },
        },
    ],
)
